%% ============================================================
%% SHEPHERDS OUD — MERMAID DIAGRAMS (copy one block at a time)
%% Paste at: https://mermaid.live
%% ============================================================


%% --- DIAGRAM 1: Platform overview (roles & modules) ---

flowchart TB
  subgraph Public["Public website"]
    LP[Landing page /]
    WL[Waitlist register]
    FI[Family guided intake]
  end

  subgraph Family["Family — no login required"]
    FS[Success page]
    FD[Care journey dashboard]
    FR[Provider shortlist / results]
  end

  subgraph Admin["Care Guide — Admin login Google"]
    AD[Admin dashboard]
    ADF[Families tab + side panel]
    ADP[Providers tab]
    ADI[Inquiries tab]
    ADW[Waitlist tab]
  end

  subgraph Provider["Care facility — magic link login"]
    PD[Provider dashboard]
  end

  LP --> WL
  LP --> FI
  FI --> FS --> FD
  FD --> FR
  ADF --> ADI
  FI -.->|creates intake| AD
  FR -.->|visit/callback request| ADI
  FR -.->|visit/callback request| PD
  ADF -.->|create match| FR


%% --- DIAGRAM 2: High-level family journey ---

flowchart LR
  A[Family submits intake] --> B[Care Guide assigned]
  B --> C[Assessment and care plan]
  C --> D[Providers matched to shortlist]
  D --> E[Family requests visit or callback]
  E --> F[Provider accepts or declines]
  F --> G[Care Guide coordinates]
  G --> H[Placement recorded]
  H --> I[Follow-ups / case closed]


%% --- DIAGRAM 3: Family pages flow ---

flowchart TD
  INTAKE["/family/intake - Guided form"]
  SUCCESS["/family/success - Confirmation + timeline"]
  DASH["/family/dashboard - Care journey"]
  RESULTS["/family/results - Provider shortlist"]

  INTAKE -->|Submit| SUCCESS
  SUCCESS --> DASH
  DASH --> RESULTS
  DASH -->|Update request| INTAKE


%% --- DIAGRAM 4: Admin dashboard — four tabs ---

flowchart TB
  subgraph AdminDashboard["Admin dashboard /admin"]
    T1[Families]
    T2[Providers]
    T3[Inquiries]
    T4[Waitlist]
  end

  T1 -->|manages| CASE[Family case + workflow]
  T2 -->|view only| PROF[Facility profiles]
  T3 -->|manages| MATCH[Match coordination]
  T4 -->|manages| WL[Pre-launch registrations]


%% --- DIAGRAM 5: Families side panel workflow ---

flowchart TD
  S2[Step 2 - Assign Care Guide]
  S3[Step 3 - Assessment and care plan]
  S4[Step 4 - Create provider match]
  S5[Step 5 - Schedule visit or callback]
  S6[Step 6 - Advance case status]

  S2 --> S3 --> S4 --> S5 --> S6


%% --- DIAGRAM 6: Family case timeline statuses ---

flowchart LR
  N[1 Request received] --> CG[2 Care Guide assigned]
  CG --> AS[3 Assessment]
  AS --> CP[4 Care plan]
  CP --> MA[5 Providers matched]
  MA --> VS[6 Visit scheduled]
  VS --> PR[7 Provider response]
  PR --> PI[8 Placement in progress]
  PI --> PL[9 Care arranged]
  PL --> F7[10 7-day follow-up]
  F7 --> F30[11 30-day follow-up]
  F30 --> F90[12 90-day follow-up]
  F90 --> CL[Case closed]


%% --- DIAGRAM 7: Inquiry / match status (Inquiries tab) ---

stateDiagram-v2
  [*] --> Suggested: Admin creates match
  Suggested --> VisitRequested: Family requests visit
  Suggested --> CallbackRequested: Family requests callback
  VisitRequested --> Accepted: Provider accepts
  VisitRequested --> Declined: Provider declines
  CallbackRequested --> Accepted: Provider accepts
  CallbackRequested --> Declined: Provider declines
  Accepted --> Coordinated: Admin marks coordinated
  Coordinated --> Placed: Admin records placement
  Coordinated --> Closed: Admin closes
  Placed --> Closed: Admin closes
  Declined --> Closed: Admin closes


%% --- DIAGRAM 8: Provider dashboard ---

flowchart LR
  subgraph ProviderDash["Provider dashboard /provider"]
    PROFILE[Facility profile]
    INQ[Inquiries list]
  end

  INQ -->|Accept| OK[Accepted - Care Guide coordinates]
  INQ -->|Decline| NO[Declined - family sees other options]


%% --- DIAGRAM 9: End-to-end sequence (all roles) ---

sequenceDiagram
  participant F as Family
  participant A as Care Guide Admin
  participant DB as Database
  participant P as Provider

  F->>DB: Submit intake
  DB-->>A: New row in Families tab + advisor email
  A->>DB: Assign guide, assessment, care plan
  F->>DB: Dashboard sync - sees timeline updates
  A->>DB: Create match
  F->>DB: View results - sees provider
  F->>DB: Request visit
  DB-->>P: Inquiry + email
  P->>DB: Accept or decline
  DB-->>A: Inquiry needs follow-up
  A->>DB: Mark coordinated then record placement
  F->>DB: Dashboard shows visit and placement status


%% --- DIAGRAM 10: Master end-to-end (one page summary) ---

flowchart TB
  subgraph Phase1["Phase 1 - Intake"]
    F1[Family submits intake]
    A1[Admin assigns Care Guide]
    F1 --> A1
  end

  subgraph Phase2["Phase 2 - Care plan"]
    A2[Admin saves assessment and care plan]
    A3[Admin marks shortlist ready]
    A2 --> A3
  end

  subgraph Phase3["Phase 3 - Matching"]
    A4[Admin creates provider match]
    F2[Family sees provider on Results]
    F3[Family requests visit or callback]
    A4 --> F2 --> F3
  end

  subgraph Phase4["Phase 4 - Coordination"]
    P1[Provider accepts or declines]
    A5[Admin marks coordinated]
    A6[Admin records placement]
    P1 --> A5 --> A6
  end

  A1 --> A2
  A3 --> A4
  F3 --> P1
  A6 --> F4[Family dashboard shows care arranged]
